@@ -1,6 +1,6 @@
 #ifndef VERSION_HPP
 #define VERSION_HPP
-#define PRODUCTVER     0,4,0,156
-#define STRPRODUCTVER  "0,4,0,156"
-#define STRPRODUCTDATE "2012-04-05"
+#define PRODUCTVER     0,4,0,159
+#define STRPRODUCTVER  "0,4,0,159"
+#define STRPRODUCTDATE "2012-04-11"
 #endif // VERSION_HPP
